0.15.6 (unrelease):
	Bug fixes:
		- Auto-wrap text in message dialog.
		- Fix ellipsiziing in entry box.
		- Fix crash on empty list with custom input (#175).

0.15.5:
	Bug fixes:
		- Reduce time waiting for keyboard grab (#153)
		- Also grab Key Release on exit. (#167)
		- Fix failing font size estimation code.
	New feature:
		- [DMENU] Allow to select line matching pattern from cmdline.(#165) 
		- [DMENU] Allow to set filter from cmdline. (#164)
		- [DMENU] Allow output to be formatted (string, filter, index, index 1 based)
		- [DMENU] Only match input lines mode.
		- [DMENU] Custom keybinding for return value.(#154,#156)
		- [DMENU] Allow additional message line. (#166)
	Improvements:
		- (Start) adding keybinding support (#131)
		- Cleanup warnings from clang checkers.
		- Fix keybindings on Russian layout (#169)
	Open bugs:
		- Urgency hint not always working (#162)

0.15.4:
	New feature:
		- Number mode for dmenu. allows user to get index back instead of content.
		- Combi mode. Combine multiple views into one.
		- Highlight current window.
		- Highlight urgent and active row in window view.
		- DMenu allow rows to be highlighted. (single, multiple, ranges)
		- New color specification based on I3. (Can be enabled by settings) (#147)
		- /etc/hosts support for ssh mode. (#137)
	Bug fixes:
		- On a single item in list disable auto-select.
		- Fix cursor position (#140)
		- Resolving manpage. (#142)
		- Fix pasting cursor one off. (#150)
		- Fix grave key -> ctrl+grave (#151)
	Improvements:
		- Better handle input methods.. Now international keyboard layout works as expected: `e ->è
		- Be more verbose about starting in daemon mode.
		- Print a user-understandable error when launching in daemon mode without a key bound.
		- Add Ctrl(Shift)Tab to switch modi's.
		- Auto size number of columns based on available columns.
		- Better way to determine font height.
		- Fix font vertical centering.
		- One-off when pasting text.