@@ -3,6 +3,8 @@
 		- Auto-wrap text in message dialog.
 		- Fix ellipsiziing in entry box.
 		- Fix crash on empty list with custom input (#175).
+	New feature:
+		- Markup support error message.
 
 0.15.5:
 	Bug fixes:
